--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
 <html>
 <head>
+<link rel="stylesheet" href="toast.css">
 <link rel="stylesheet" href="style.css">
+<link href="webfonts/ss-symbolicons-block.css" rel="stylesheet" />
+<script src="webfonts/ss-symbolicons-block.js"></script>
 </head>
 <body>
+  <section class="hero">
+    <h1 class="largeHeader hero__largeHeader">The State of <br>Data Security Online</h1>
+  </section>
+
+  <section class="importance">
+    <div class="section__pre">
+      <span class="section__pre-title">01</span>
+      <h3 class="section__pre-subhead">The Importance of Online Security</h3>
+    </div>
+    <div class="grid">
+      <div class="grid__col grid__col--1-of-2">
+        <img class="section__image--left" src="img/woods_ZMist.png"/>
+      </div>
+
+      <div class="grid__col grid__col--1-of-2">
+        <div class="section__content--right">
+          <h3></h3>
+          <p class="">Lorem ipsum dolor sit amet, ne utamur civibus sit, laudem albucius dissentiunt eum ne. In sale omnesque eleifend eos.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <i class="section__border-icon">⁂</i>
+  <section class="quotes">
+    
+  </section>
 </body>
 </html>
