--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <h1 class="largeHeader hero__largeHeader">The State of <br>Data Security Online</h1>
   </section>
 
+  <!-- Absolutely positioned backcground divs -->
+  <div class="bg__code-shape bg__code-shape--left"></div>
+  <div class="bg__code-shape bg__code-shape--right"></div>
+  <!-- End -->
+
+  <!-- Start of first section -->
   <section class="importance">
     <div class="section__pre">
       <span class="section__pre-title">01</span>
@@ -23,14 +29,38 @@
       <div class="grid__col grid__col--1-of-2">
         <div class="section__content--right">
           <h3></h3>
-          <p class="">Lorem ipsum dolor sit amet, ne utamur civibus sit, laudem albucius dissentiunt eum ne. In sale omnesque eleifend eos.</p>
+          <blockquote class="section__content-quote"><pre>76<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults say they are “not too confident” or “not at all confident” that records of their activity maintained by the online advertisers who place ads on the websites they visit will remain private and secure.<span class="section__content-quote-attribution"></span></blockquote>
+          <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus intellegam per. Sint civibus mnesarchum ex eos. Case dolor per id. Malis graecis partiendo no per, ne exerci posidonium vim, at est nibh noluisse.</p>
         </div>
       </div>
     </div>
   </section>
+
   <i class="section__border-icon">⁂</i>
-  <section class="quotes">
-    
+
+  <!-- Start of second section -->
+  <section class="cyber-attacks">
+    <div class="section__pre">
+      <span class="section__pre-title">02</span>
+      <h3 class="section__pre-subhead">The Likelihood of Online Cyber Attacks</h3>
+    </div>
+    <div class="grid">
+      <div class="grid__col grid__col--1-of-2">
+        <img class="section__image--left" src="img/woods_ZMist.png"/>
+      </div>
+
+      <div class="grid__col grid__col--1-of-2">
+        <div class="section__content--right">
+          <h3></h3>
+          <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus intellegam per. Sint civibus mnesarchum ex eos. Case dolor per id. Malis graecis partiendo no per, ne exerci posidonium vim, at est nibh noluisse.</p>
+        </div>
+      </div>
+    </div>
   </section>
+
+  
+
+  <i class="section__border-icon">⁂</i>
+
 </body>
 </html>
