--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         </div>
       </div>
     </div>
+
+    <div class="grid section__content-meta">
+      <div class="grid__col grid__col--3-of-5 grid__col--centered">
+        <div class="section__content--centered">
+          <h3></h3>
+          <blockquote class="section__content-quote section__content-quote--full-width section__content-quote--green"><pre>55<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults (55%) said that people should have the ability to use the internet completely anonymously for certain kinds of online activities.</p>
+        </div>
+        <img class="section__image--left" src="img/station_SCA.png"/>
+      </div>
+    </div>
   </section>
 
   <i class="section__border-icon">⁂</i>
