--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
       <div class="grid__col grid__col--3-of-5 grid__col--centered">
         <div class="section__content--centered">
           <h3></h3>
-          <blockquote class="section__content-quote section__content-quote--full-width section__content-quote--green"><pre>55<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults (55%) said that people should have the ability to use the internet completely anonymously for certain kinds of online activities.</p>
+          <img class="section__image--left" src="img/station_Sevendust.png"/>
+          <blockquote class="section__content-quote"><pre>55<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">T</span>he majority of adults said that people should have the ability to use the internet completely anonymously for certain kinds of online activities.
+          <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus.</p></blockquote>
+          <div class="section__content-inner--two-sided">
+            <i class="ss-males"></i>
+            <i class="ss-females"></i>
+          </div>
         </div>
-        <img class="section__image--left" src="img/station_SCA.png"/>
       </div>
     </div>
   </section>
