--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<link rel="stylesheet" href="toast.css">
-<link rel="stylesheet" href="style.css">
-<link href="webfonts/ss-symbolicons-block.css" rel="stylesheet" />
-<script src="webfonts/ss-symbolicons-block.js"></script>
+  <link rel="stylesheet" type="text/css" href="webfonts.css">
+  <link rel="stylesheet" href="toast.css">
+  <link rel="stylesheet" href="style.css">
+  <link href="webfonts/ss-symbolicons-block.css" rel="stylesheet" />
+  <script src="webfonts/ss-symbolicons-block.js"></script>
 </head>
 <body>
   <section class="hero">
@@ -13,6 +14,7 @@
   <!-- Absolutely positioned backcground divs -->
   <div class="bg__code-shape bg__code-shape--left"></div>
   <div class="bg__code-shape bg__code-shape--right"></div>
+  <!-- div class="bg__code-shape bg__code-shape--usa"></div -->
   <!-- End -->
 
   <!-- Start of first section -->
@@ -36,16 +38,19 @@
     </div>
 
     <div class="grid section__content-meta">
+      <div class="grid__col grid__col--4-of-5 grid__col--centered">
+        <img class="section__image--left" src="img/station_Sevendust.png"/>
+      </div>
       <div class="grid__col grid__col--3-of-5 grid__col--centered">
         <div class="section__content--centered">
-          <h3></h3>
-          <img class="section__image--left" src="img/station_Sevendust.png"/>
           <blockquote class="section__content-quote"><pre>55<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">T</span>he majority of adults said that people should have the ability to use the internet completely anonymously for certain kinds of online activities.
           <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus.</p></blockquote>
           <div class="section__content-inner--two-sided">
             <i class="ss-males"></i>
             <i class="ss-females"></i>
           </div>
+          <span class="section__content-quote-small-note">Men are more likely than women to think people should be able to engage in certain online activities anonymously (61% vs. 49%).
+          </span>
         </div>
       </div>
     </div>
@@ -58,19 +63,9 @@
     <div class="section__pre">
       <span class="section__pre-title">02</span>
       <h3 class="section__pre-subhead">The Likelihood of Online Cyber Attacks</h3>
+      <p class="section__pre-paragraph">Americans are not taking greater steps to protect their personal information online because they do not think it will be effective in preventing government monitoring. Still others think the use of certain privacy-enhancing tools might actually be a red flag that makes them appear suspicious and invites greater scrutiny.</p>
     </div>
-    <div class="grid">
-      <div class="grid__col grid__col--1-of-2">
-        <img class="section__image--left" src="img/woods_ZMist.png"/>
-      </div>
-
-      <div class="grid__col grid__col--1-of-2">
-        <div class="section__content--right">
-          <h3></h3>
-          <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus intellegam per. Sint civibus mnesarchum ex eos. Case dolor per id. Malis graecis partiendo no per, ne exerci posidonium vim, at est nibh noluisse.</p>
-        </div>
-      </div>
-    </div>
+    <blockquote class="section__content-quote section__content-quote--jumbotron section__content-quote--centered">I have nothing to hide.</blockquote>
   </section>
 
   
