--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="webfonts.css">
-  <link rel="stylesheet" href="toast.css">
-  <link rel="stylesheet" href="style.css">
-  <link href="webfonts/ss-symbolicons-block.css" rel="stylesheet" />
-  <script src="webfonts/ss-symbolicons-block.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/toast.css">
+  <link rel="stylesheet" type="text/css" href="css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/ss-symbolicons-block.css"/>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/ss-symbolicons.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script>
+   new WOW().init();
+  </script>
 </head>
 <body>
-  <section class="hero">
-    <h1 class="largeHeader hero__largeHeader">The State of <br>Data Security Online</h1>
+  <section class="hero animated fadeIn">
+    <h1 class="largeHeader hero__largeHeader">The State of <br>Data Security Online</h1>s
   </section>
 
   <!-- Absolutely positioned backcground divs -->
@@ -25,12 +32,11 @@
     </div>
     <div class="grid">
       <div class="grid__col grid__col--1-of-2">
-        <img class="section__image--left" src="img/woods_ZMist.png"/>
+        <img class="section__image--left wow animated fadeIn" src="img/woods_ZMist.png"/>
       </div>
 
       <div class="grid__col grid__col--1-of-2">
         <div class="section__content--right">
-          <h3></h3>
           <blockquote class="section__content-quote"><pre>76<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults say they are “not too confident” or “not at all confident” that records of their activity maintained by the online advertisers who place ads on the websites they visit will remain private and secure.<span class="section__content-quote-attribution"></span></blockquote>
           <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus intellegam per. Sint civibus mnesarchum ex eos. Case dolor per id. Malis graecis partiendo no per, ne exerci posidonium vim, at est nibh noluisse.</p>
         </div>
@@ -39,7 +45,7 @@
 
     <div class="grid section__content-meta">
       <div class="grid__col grid__col--3-of-5 grid__col--centered">
-        <img class="section__image--left" src="img/station_Sevendust.png"/>
+        <img class="section__image--left wow animated fadeIn" src="img/station_Sevendust.png"/>
       </div>
       <div class="grid__col grid__col--3-of-5 grid__col--centered">
         <div class="section__content--centered">
@@ -60,12 +66,12 @@
 
   <!-- Start of second section -->
   <section class="cyber-attacks">
-    <div class="section__pre">
+    <div class="section__pre wow animated fadeIn">
       <span class="section__pre-title">02</span>
       <h3 class="section__pre-subhead">The Likelihood of Online Cyber Attacks</h3>
       <p class="section__pre-paragraph">Americans are not taking greater steps to protect their personal information online because they do not think it will be effective in preventing government monitoring. Still others think the use of certain privacy-enhancing tools might actually be a red flag that makes them appear suspicious and invites greater scrutiny.</p>
     </div>
-    <blockquote class="section__content-quote section__content-quote--jumbotron section__content-quote--centered">I have nothing to hide.</blockquote>
+    <blockquote class="section__content-quote section__content-quote--jumbotron section__content-quote--centered wow animated fadeIn">I have nothing to hide.</blockquote>
   </section>
 
   
