peformance ish tweaks

--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="css/toast.css">
   <link rel="stylesheet" type="text/css" href="css/fonts.css">
-  <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/toast.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/ss-symbolicons-block.css"/>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="js/ss-symbolicons.js"></script>
-  <script src="js/wow.min.js"></script>
-  <script>
-   new WOW().init();
-  </script>
 </head>
 <body>
-  <section class="hero animated fadeIn">
+  <section class="hero animated fadeInDownBig">
     <h1 class="largeHeader hero__largeHeader">The State of <br>Data Security Online</h1>s
   </section>
 
   <!-- Absolutely positioned backcground divs -->
   <div class="bg__code-shape bg__code-shape--left"></div>
   <div class="bg__code-shape bg__code-shape--right"></div>
-  <!-- div class="bg__code-shape bg__code-shape--usa"></div -->
   <!-- End -->
 
   <!-- Start of first section -->
@@ -37,23 +29,23 @@
 
       <div class="grid__col grid__col--1-of-2">
         <div class="section__content--right">
-          <blockquote class="section__content-quote"><pre>76<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults say they are “not too confident” or “not at all confident” that records of their activity maintained by the online advertisers who place ads on the websites they visit will remain private and secure.<span class="section__content-quote-attribution"></span></blockquote>
+          <blockquote class="section__content-quote"><pre class="wow animated slideInUp">76<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults say they are “not too confident” or “not at all confident” that records of their activity maintained by the online advertisers who place ads on the websites they visit will remain private and secure.<span class="section__content-quote-attribution"></span></blockquote>
           <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus intellegam per. Sint civibus mnesarchum ex eos. Case dolor per id. Malis graecis partiendo no per, ne exerci posidonium vim, at est nibh noluisse.</p>
         </div>
       </div>
     </div>
 
     <div class="grid section__content-meta">
-      <div class="grid__col grid__col--3-of-5 grid__col--centered">
+      <div class="grid__col grid__col--2-of-3 grid__col--centered">
         <img class="section__image--left wow animated fadeIn" src="img/station_Sevendust.png"/>
       </div>
       <div class="grid__col grid__col--3-of-5 grid__col--centered">
         <div class="section__content--centered">
-          <blockquote class="section__content-quote"><pre>55<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">T</span>he majority of adults said that people should have the ability to use the internet completely anonymously for certain kinds of online activities.
+          <blockquote class="section__content-quote"><pre class="wow animated slideInUp">55<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">T</span>he majority of adults said that people should have the ability to use the internet completely anonymously for certain kinds of online activities.
           <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus.</p></blockquote>
           <div class="section__content-inner--two-sided">
-            <i class="ss-males"></i>
-            <i class="ss-females"></i>
+            <i class="ss-males wow animated slideInUp"></i>
+            <i class="ss-females wow animated slideInUp"></i>
           </div>
           <span class="section__content-quote-small-note">Men are more likely than women to think people should be able to engage in certain online activities anonymously (61% vs. 49%).
           </span>
@@ -62,21 +54,28 @@
     </div>
   </section>
 
+  <!-- Section separation -->
   <i class="section__border-icon">⁂</i>
 
   <!-- Start of second section -->
   <section class="cyber-attacks">
-    <div class="section__pre wow animated fadeIn">
+    <div class="section__pre">
       <span class="section__pre-title">02</span>
       <h3 class="section__pre-subhead">The Likelihood of Online Cyber Attacks</h3>
-      <p class="section__pre-paragraph">Americans are not taking greater steps to protect their personal information online because they do not think it will be effective in preventing government monitoring. Still others think the use of certain privacy-enhancing tools might actually be a red flag that makes them appear suspicious and invites greater scrutiny.</p>
+      <p class="section__pre-paragraph wow animated fadeIn">Americans are not taking greater steps to protect their personal information online because they do not think it will be effective in preventing government monitoring. Still others think the use of certain privacy-enhancing tools might actually be a red flag that makes them appear suspicious and invites greater scrutiny.</p>
     </div>
     <blockquote class="section__content-quote section__content-quote--jumbotron section__content-quote--centered wow animated fadeIn">I have nothing to hide.</blockquote>
   </section>
 
-  
-
+  <!-- Section separation -->
   <i class="section__border-icon">⁂</i>
 
+  <!-- JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/ss-symbolicons.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script>
+   new WOW().init();
+  </script>
 </body>
 </html>
