--- a/index.html
+++ b/index.html
@@ -62,9 +62,20 @@
     <div class="section__pre">
       <span class="section__pre-title">02</span>
       <h3 class="section__pre-subhead">The Likelihood of Online Cyber Attacks</h3>
-      <p class="section__pre-paragraph wow animated fadeIn">Americans are not taking greater steps to protect their personal information online because they do not think it will be effective in preventing government monitoring. Still others think the use of certain privacy-enhancing tools might actually be a red flag that makes them appear suspicious and invites greater scrutiny.</p>
+      <div class="grid__col grid__col--2-of-3 grid__col--centered">
+        <p class="section__pre-paragraph ">Americans are not taking greater steps to protect their personal information online because they do not think it will be effective in preventing government monitoring. Still others think the use of certain privacy-enhancing tools might actually be a red flag that makes them appear suspicious and invites greater scrutiny.</p>
+      </div>
     </div>
-    <blockquote class="section__content-quote section__content-quote--jumbotron section__content-quote--centered wow animated fadeIn">I have nothing to hide.</blockquote>
+
+    <blockquote class="section__content-quote section__content-quote--jumbotron section__content-quote--centered wow animated fadeIn">
+      <div class="grid__col grid__col--3-of-3 grid__col--centered">
+        I have nothing to hide.
+      </div>
+    </blockquote>
+
+    <div class="grid__col grid__col--3-of-6 grid__col--centered">
+      <span class="section__content-quote-small-note section__content-quote-small-note--centered">One of the most common refrains among those who had not made many changes in their online practices in response to government monitoring programs was that they had “nothing to hide.” This exact phrase appeared repeatedly, but also was reflected in statements that suggested a similar rationale.</span>
+    </div>
   </section>
 
   <!-- Section separation -->
