updates with attribution

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
       <div class="grid__col grid__col--1-of-2">
         <div class="section__content--right">
-          <blockquote class="section__content-quote"><pre class="wow animated slideInUp">76<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults say they are “not too confident” or “not at all confident” that records of their activity maintained by the online advertisers who place ads on the websites they visit will remain private and secure.<span class="section__content-quote-attribution"></span></blockquote>
+          <blockquote class="section__content-quote"><pre class="wow animated slideInUp">76<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults say they are ‘not too confident’ or ‘not at all confident’ that records of their activity maintained by the online advertisers who place ads on the websites they visit will remain private and secure.”<span class="section__content-quote-attribution"></span><a class="section__quote-attribution" href="">According to the Pew Research Center</a></blockquote>
+
           <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus intellegam per. Sint civibus mnesarchum ex eos. Case dolor per id. Malis graecis partiendo no per, ne exerci posidonium vim, at est nibh noluisse.</p>
         </div>
       </div>
@@ -55,14 +56,14 @@
   </section>
 
   <!-- Section separation -->
-  <i class="section__border-icon">⁂</i>
+  <i class="section__border-icon"></i>
 
   <!-- Start of second section -->
   <section class="cyber-attacks">
     <div class="section__pre">
       <span class="section__pre-title">02</span>
       <h3 class="section__pre-subhead">The Likelihood of Online Cyber Attacks</h3>
-      <div class="grid__col grid__col--2-of-3 grid__col--centered">
+      <div class="grid__col grid__col--3-of-5 grid__col--centered">
         <p class="section__pre-paragraph ">Americans are not taking greater steps to protect their personal information online because they do not think it will be effective in preventing government monitoring. Still others think the use of certain privacy-enhancing tools might actually be a red flag that makes them appear suspicious and invites greater scrutiny.</p>
       </div>
     </div>
@@ -79,7 +80,7 @@
   </section>
 
   <!-- Section separation -->
-  <i class="section__border-icon">⁂</i>
+  <i class="section__border-icon"></i>
 
   <!-- JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
