--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/ss-symbolicons-block.css"/>
 </head>
 <body>
-  <section class="hero animated fadeInDownBig">
+  <section class="hero animated fadeIn">
     <h1 class="largeHeader hero__largeHeader">The State of <br>Data Security Online</h1>s
   </section>
 
@@ -29,7 +29,7 @@
 
       <div class="grid__col grid__col--1-of-2">
         <div class="section__content--right">
-          <blockquote class="section__content-quote"><pre class="wow animated slideInUp">76<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults say they are ‘not too confident’ or ‘not at all confident’ that records of their activity maintained by the online advertisers who place ads on the websites they visit will remain private and secure.”<span class="section__content-quote-attribution"></span><a class="section__quote-attribution" href="">According to the Pew Research Center</a></blockquote>
+          <blockquote class="section__content-quote"><pre class="wow animated slideInUp">76<span class="section__content-quote-percent">%</span></pre><span class="section__content-first-letter">O</span>f adults say they are ‘not too confident’ or ‘not at all confident’ that records of their activity maintained by the online advertisers who place ads on the websites they visit will remain private and secure.”<span class="section__content-quote-attribution"></span><a class="section__quote-attribution" href="">The Pew Research Center</a></blockquote>
 
           <p class="">Nec dicant evertitur ad, qui melius accusam copiosae no. Te pro ubique vocibus tacimates, in ocurreret forensibus intellegam per. Sint civibus mnesarchum ex eos. Case dolor per id. Malis graecis partiendo no per, ne exerci posidonium vim, at est nibh noluisse.</p>
         </div>
@@ -74,8 +74,8 @@
       </div>
     </blockquote>
 
-    <div class="grid__col grid__col--3-of-6 grid__col--centered">
-      <span class="section__content-quote-small-note section__content-quote-small-note--centered">One of the most common refrains among those who had not made many changes in their online practices in response to government monitoring programs was that they had “nothing to hide.” This exact phrase appeared repeatedly, but also was reflected in statements that suggested a similar rationale.</span>
+    <div class="grid__col grid__col--2-of-3 grid__col--centered">
+      <p class="text--centered">One of the most common refrains among those who had not made many changes in their online practices in response to government monitoring programs was that they had “nothing to hide.” This exact phrase appeared repeatedly, but also was reflected in statements that suggested a similar rationale.</p>
     </div>
   </section>
 
